[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lena_sauce"
authors = [
  {name = "Caleb Marshall", email="camarsha@unc.edu"}
]
version = "0.1.0"
dependencies = [
  "numpy",
  "polars > 0.19",
  "matplotlib"    ,
  "numba",
  "scipy",
  "typing_extensions",
  "sauce",
]

[tool.setuptools]
packages = ["lena_sauce"]
include-package-data = true

[tool.setuptools.package-data]
"lena_sauce" = ["NaI-Map.csv", "Scint-Map.csv", "mdpp-setup.toml"]
